# ArrC

./: CLAUDE.md  CMakeLists.txt  FRAMEWORK_ANALYSIS.md  FRAMEWORK_ANALYSIS_REPORT.md  build_log.txt  kernels.cu  main.cu  ndarray.cuh  package-lock.json  slices.cpp  utils.cu
include/: elementwise_kernels.cuh  ndarray.cuh  serialize.h  slices.h  tensor.h
include/functions/: arithmetic.h  base.h
include/losses/: loss.h
include/nn/: losses.h
include/optim/: adam.cuh  adam.h  kernels.cuh  optimizer.h  rmsprop.cuh  rmsprop.h  sgd.cuh  sgd.h
src/: elementwise_kernels.cu  slices.cpp  utils.cpp
src/optim/: adam.cpp  adam.cu  kernels.cu  rmsprop.cpp  rmsprop.cu  sgd.cpp  sgd.cu
